--- a/app/components/nav.html
+++ b/app/components/nav.html
@@ -1,8 +1,8 @@
-<div id="sideNav" class="mdSideNav">
+<div id="side-nav" class="md-side-nav">
   <li>
     <a
       href="javascript:void(0)"
-      class="sideNavCloseButton"
+      class="side-nav-close-button"
       onclick="closeSideNav()"
       onkeyup="closeSideNav()"
       >&times;</a
@@ -12,13 +12,12 @@
     <li><a href="/index.html">Home</a></li>
     <li><a href="/news.html">News</a></li>
     <li><a href="/exhibition.html">Exhibitions</a></li>
-    <!--<li><a href="/community.html">Community</a></li>-->
     <li><a href="/food_and_drink.html">Food & drink</a></li>
     <br />
     <li><a href="/shop.html">Shop</a></li>
   </ul>
 </div>
-<span class="openNav" onclick="openSideNav()" onkeyup="openSideNav()"
+<span class="open-nav" onclick="openSideNav()" onkeyup="openSideNav()"
   >&#9776;
-  <p class="txtSideNav">Meny</p></span
+  <p class="txt-side-nav">Meny</p></span
 >
