--- a/app/src/scss/modules/_navbar.scss
+++ b/app/src/scss/modules/_navbar.scss
@@ -1,23 +1,23 @@
-.txtSideNav {
+.txt-side-nav {
   color: #0b3d5e;
   font-size: 10px;
 }
 
-.mdSideNav.openSideNav {
+.md-side-nav.open-side-nav {
   width: 80%;
 }
 
-.mdSideNav.closeSideNav {
+.md-side-nav.close-side-nav {
   width: 0;
 }
 
-.openNav {
+.open-nav {
   font-size: 30px;
   cursor: pointer;
   color: #18a0fb;
 }
 
-.mdSideNav {
+.md-side-nav {
   justify-content: center;
   height: 100%;
   width: 0;
@@ -31,7 +31,7 @@
   padding-top: 80px;
 }
 
-.mdSideNav a {
+.md-side-nav a {
   display: grid;
   justify-items: end;
   padding: 8px 8px 8px 32px;
@@ -42,11 +42,11 @@
   margin: 10px;
 }
 
-.mdSideNav a:hover {
+.md-side-nav a:hover {
   color: #0b3d5e;
 }
 
-.mdSideNav .sideNavCloseButton {
+.md-side-nav .side-nav-close-button {
   position: absolute;
   top: 0;
   right: 25px;
@@ -55,7 +55,7 @@
   color: #fff;
 }
 .nav,
-.mdSideNav {
+.md-side-nav {
   display: flex;
 }
 .nav {
@@ -67,7 +67,7 @@
 }
 
 @media #{$screen__l} {
-  .mdSideNav.openSideNav {
+  .md-side-nav.open-side-nav {
     width: 50%;
   }
 }
