--- a/app/src/scss/modules/_sub-page-body-c.scss
+++ b/app/src/scss/modules/_sub-page-body-c.scss
@@ -24,7 +24,6 @@
   min-height: 500px;
   object-fit: cover;
   background-attachment: fixed;
-  //background-attachment: scroll;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -32,6 +31,10 @@
   -moz-background-size: cover;
   -o-background-size: cover;
   @media #{$screen__l} {
+    background-attachment: scroll;
+  }
+  /* safari only */
+  @media not all and (min-resolution: 0.001dpcm) {
     background-attachment: scroll;
   }
 }
