--- a/app/src/scss/modules/_sub-page-body-h.scss
+++ b/app/src/scss/modules/_sub-page-body-h.scss
@@ -24,7 +24,6 @@
   min-height: 500px;
   object-fit: cover;
   background-attachment: fixed;
-  //background-attachment: scroll;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -34,4 +33,8 @@
   @media #{$screen__l} {
     background-attachment: scroll;
   }
+  /* safari only */
+  @media not all and (min-resolution:.001dpcm) { 
+    background-attachment: scroll;
+}
 }
