REFACTOR renaming components

--- a/app/components/body-components/explore-for-kids.html
+++ b/app/components/body-components/explore-for-kids.html
@@ -1,6 +1,6 @@
-<div class="body-e-grid-container">
-  <div class="body-e-box-1 body-e-box-img" alt=""></div>
-  <div class="body-e-box-2">
+<div class="explore-for-kids-grid-container">
+  <div class="explore-for-kids-box-1 explore-for-kids-box-img" alt=""></div>
+  <div class="explore-for-kids-box-2">
     <h2>Explore</h2>
     <h5>
       <small><i>For kids</i></small>
