--- a/app/components/body-components/explore-for-researchers.html
+++ b/app/components/body-components/explore-for-researchers.html
@@ -1,6 +1,6 @@
-<div class="body-g-grid-container">
-  <div class="body-g-box-1 body-g-box-img" alt=""></div>
-  <div class="body-g-box-2">
+<div class="explore-for-researchers-grid-container">
+  <div class="explore-for-researchers-box-1 explore-for-researchers-box-img" alt=""></div>
+  <div class="explore-for-researchers-box-2">
     <h2>Explore</h2>
     <h5>
       <small><i>Researchers</i></small>
