--- a/app/components/body-components/info-box.html
+++ b/app/components/body-components/info-box.html
@@ -1,6 +1,6 @@
-<div class="body-b-grid-container">
+<div class="info-box-grid-container">
   <div class="bady-box-b-1">
-    <div class="body-b-info-grid-container">
+    <div class="info-box-info-grid-container">
       <div class="body-box1-tital">
         <small><i>HOURS</i></small>
       </div>
