--- a/app/components/body-components/signup.html
+++ b/app/components/body-components/signup.html
@@ -1,5 +1,5 @@
-<div class="body-signup-c-grid-container">
-  <div class="body-signup-c-box-1">
+<div class="signup-grid-container">
+  <div class="signup-box-1">
     <h2>Get Involved</h2>
     <h5>
       <small><i>Support</i></small>
@@ -12,7 +12,7 @@
       Department and they will be able to assist you.
     </p>
   </div>
-  <div class="body-signup-c-box-2 grid">
+  <div class="signup-box-2 grid">
       <a href="/community.html">
         <button class="test-bottum">Volunteer</button>
       </a>
