--- a/app/components/body-components/testimonial.html
+++ b/app/components/body-components/testimonial.html
@@ -1,5 +1,5 @@
-<div class="testimonial-body-d-grid-container">
-  <div class="testimonial-body-d">
+<div class="testimonial-grid-container">
+  <div class="testimonial">
     <h1>Community Science Museum</h1>
     <h5>
       <small><i>Explore togethe</i></small>
@@ -17,29 +17,29 @@
       the dinosaur exhibits – they only come to life at night when everyone’s gone home).
     </p>
   </div>
-  <div class="testimonial-body-d-box-1">
+  <div class="testimonial-box-1">
     <a href="/exhibition.html#section-box1">
-      <button class="testimonial-body-d-button">Cosmology</button>
+      <button class="testimonial-button">Cosmology</button>
     </a>
   </div>
-  <div class="testimonial-body-d-box-2">
+  <div class="testimonial-box-2">
     <a href="/exhibition.html#section-box2">
-      <button class="testimonial-body-d-button">Evolution</button>
+      <button class="testimonial-button">Evolution</button>
     </a>
   </div>
-  <div class="testimonial-body-d-box-3">
+  <div class="testimonial-box-3">
     <a href="/exhibition.html#section-box3">
-      <button class="testimonial-body-d-button">Robotics and AI</button>
+      <button class="testimonial-button">Robotics and AI</button>
     </a>
   </div>
-  <div class="testimonial-body-d-box-4">
+  <div class="testimonial-box-4">
     <a href="/exhibition.html#section-box4">
-      <button class="testimonial-body-d-button">Biology & Medicine</button>
+      <button class="testimonial-button">Biology & Medicine</button>
     </a>
   </div>
-  <div class="testimonial-body-d-box-5">
+  <div class="testimonial-box-5">
     <a href="/exhibition.html#section-box5">
-      <button class="testimonial-body-d-button">Ecology</button>
+      <button class="testimonial-button">Ecology</button>
     </a>
   </div>
 </div>
