--- a/app/components/sub-pages/aeronautics.html
+++ b/app/components/sub-pages/aeronautics.html
@@ -1,6 +1,6 @@
-<div class="sub-page-body-g-grid-container">
-  <div class="sub-page-body-g-box-1 sub-page-body-g-box-img" alt=""></div>
-  <div class="sub-page-body-g-box-2">
+<div class="aeronautics-grid-container">
+  <div class="aeronautics-box-1 aeronautics-box-img" alt=""></div>
+  <div class="aeronautics-box-2">
     <h2>Visiting Professor of Aeronautics</h2>
     <h5>
       <small><i>News</i></small>
