--- a/app/components/sub-pages/cosmology.html
+++ b/app/components/sub-pages/cosmology.html
@@ -1,6 +1,6 @@
-<div class="sub-page-body-a-grid-container">
-  <div class="sub-page-body-a-box-1 sub-page-body-a-box-img" alt=""></div>
-  <div class="sub-page-body-a-box-2" id="section-box1">
+<div class="cosmology-grid-container">
+  <div class="cosmology-box-1 cosmology-box-img" alt=""></div>
+  <div class="cosmology-box-2" id="section-box1">
     <h2>Cosmology</h2>
     <h5>
       <small><i>Spaces</i></small>
