--- a/app/components/sub-pages/loan.html
+++ b/app/components/sub-pages/loan.html
@@ -1,6 +1,6 @@
-<div class="sub-page-body-c-grid-container">
-  <div class="sub-page-body-c-box-1 sub-page-body-c-box-img" alt=""></div>
-  <div class="sub-page-body-c-box-2">
+<div class="loan-grid-container">
+  <div class="loan-box-1 loan-box-img" alt=""></div>
+  <div class="loan-box-2">
     <h2>Energetica Exhibition on Loan</h2>
     <h5>
       <small><i>News</i></small>
