--- a/app/components/sub-pages/museum.html
+++ b/app/components/sub-pages/museum.html
@@ -1,6 +1,6 @@
-<div class="sub-page-body-d-grid-container">
-  <div class="sub-page-body-d-box-1 sub-page-body-d-box-img" alt=""></div>
-  <div class="sub-page-body-d-box-2">
+<div class="museum-grid-container">
+  <div class="museum-box-1 museum-box-img" alt=""></div>
+  <div class="museum-box-2">
     <h2>Night in the Museum</h2>
     <h5>
       <small><i>News</i></small>
