--- a/app/src/scss/main.scss
+++ b/app/src/scss/main.scss
@@ -4,27 +4,27 @@
 @import "modules/navbar";
 @import "modules/header";
 @import "modules/footer";
-@import "modules/hero-e";
-@import "modules/body-b";
-@import "modules/body-e";
-@import "modules/body-f";
-@import "modules/body-g";
-@import "modules/testimonal-body-d";
-@import "modules/body-signup-c";
-@import "modules/sub-page-body-g";
-@import "modules/sub-page-body-d";
-@import "modules/sub-page-body-c";
-@import "modules/sub-page-body-a";
-@import "modules/sub-page-body-b";
-@import "modules/sub-page-body-e";
-@import "modules/sub-page-body-f";
-@import "modules/sub-page-body-h";
+@import "modules/hero";
+@import "modules/info-box";
+@import "modules/explore-for-kids";
+@import "modules/explore-for-teachers";
+@import "modules/explore-for-researchers";
+@import "modules/testimonal";
+@import "modules/signup";
+@import "modules/aeronautics";
+@import "modules/museum";
+@import "modules/loan";
+@import "modules/cosmology";
+@import "modules/evolution";
+@import "modules/medicine";
+@import "modules/ai";
+@import "modules/ecology";
 @import "modules/sub-page-hero-x";
 @import "modules/sub-page-hero-x-1";
 @import "modules/sub-shop-hero-x-2";
 @import "modules/sub-shop-hero-x-3";
-@import "modules/sub-shop-body";
-@import "modules/sub-shop-body-2";
-@import "modules/sub-page-form";
-@import "modules/sub-page-form-1";
+@import "modules/shop";
+@import "modules/shop-2";
+@import "modules/volunteer-form";
+@import "modules/internships-form-1";
 @import "modules/help-box";
