--- a/app/components/body-components/explore-for-teachers.html
+++ b/app/components/body-components/explore-for-teachers.html
@@ -1,5 +1,5 @@
-<div class="body-f-grid-container">
-  <div class="body-f-box-1">
+<div class="explore-for-teachers-grid-container">
+  <div class="explore-for-teachers-box-1">
     <h2>Explore</h2>
     <h5>
       <small><i>For teachers</i></small>
@@ -12,5 +12,5 @@
       time to bring your students through for a visit.
     </p>
   </div>
-  <div class="body-f-box-2 body-f-box-img" alt="" ></div>
+  <div class="explore-for-teachers-box-2 explore-for-teachers-box-img" alt="" ></div>
 </div>
