--- a/app/components/sub-pages/ai.html
+++ b/app/components/sub-pages/ai.html
@@ -1,6 +1,6 @@
-<div class="sub-page-body-f-grid-container">
-  <div class="sub-page-body-f-box-1 sub-page-body-f-box-img" alt=""></div>
-  <div class="sub-page-body-f-box-2" id="section-box3">
+<div class="ai-grid-container">
+  <div class="ai-box-1 ai-box-img" alt=""></div>
+  <div class="ai-box-2" id="section-box3">
     <h2>Robotics and AI</h2>
     <h5>
       <small><i>Spaces</i></small>
