--- a/app/components/sub-pages/ecology.html
+++ b/app/components/sub-pages/ecology.html
@@ -1,6 +1,6 @@
-<div class="sub-page-body-h-grid-container">
-  <div class="sub-page-body-h-box-1 sub-page-body-h-box-img" alt=""></div>
-  <div class="sub-page-body-h-box-2" id="section-box5">
+<div class="ecology-grid-container">
+  <div class="ecology-box-1 ecology-box-img" alt=""></div>
+  <div class="ecology-box-2" id="section-box5">
     <h2>Ecology</h2>
     <h5>
       <small><i>Spaces</i></small>
