--- a/app/components/sub-pages/evolution.html
+++ b/app/components/sub-pages/evolution.html
@@ -1,6 +1,6 @@
-<div class="sub-page-body-b-grid-container">
-  <div class="sub-page-body-b-box-1 sub-page-body-b-box-img" alt=""></div>
-  <div class="sub-page-body-b-box-2" id="section-box2">
+<div class="evolution-grid-container">
+  <div class="evolution-box-1 evolution-box-img" alt=""></div>
+  <div class="evolution-box-2" id="section-box2">
     <h2>Evolution</h2>
     <h5>
       <small><i>Spaces</i></small>
