--- a/app/components/sub-pages/medicine.html
+++ b/app/components/sub-pages/medicine.html
@@ -1,6 +1,6 @@
-<div class="sub-page-body-e-grid-container">
-  <div class="sub-page-body-e-box-1 sub-page-body-e-box-img" alt=""></div>
-  <div class="sub-page-body-e-box-2" id="section-box4">
+<div class="medicine-grid-container">
+  <div class="medicine-box-1 medicine-box-img" alt=""></div>
+  <div class="medicine-box-2" id="section-box4">
     <h2>Biology and Medicine</h2>
     <h5>
       <small><i>Spaces</i></small>
