--- a/app/src/scss/modules/_aeronautics.scss
+++ b/app/src/scss/modules/_aeronautics.scss
@@ -1,34 +1,29 @@
-.body-f-grid-container {
-  grid-template-areas: "body-f-box-1 body-f-box-2";
-}
-.body-f-grid-container {
-  background-color: #f5f5f5;
+.aeronautics-grid-container {
+  grid-template-areas: "aeronautics-box-1 aeronautics-box-2";
 }
 
-.body-f-box-2 {
-  grid-area: body-f-box-2;
+.aeronautics-box-1 {
+  grid-area: aeronautics-box-1;
 }
 
-.body-f-box-1 {
-  grid-area: body-f-box-1;
-  padding: 50px 30px;
-  text-align: justify;
+.aeronautics-box-2 {
+  grid-area: aeronautics-box-2;
+  padding: 20px 30px;
+  @media #{$screen__l} {
+    padding: 50px 80px;
+  }
   p {
     font-size: $font--m;
     font-weight: 100;
   }
-  @media #{$screen__l} {
-    padding: 50px 80px;
-  }
 }
 
-.body-f-box-img {
-  background-image: url("../../../media/skeleton.jpg");
+.aeronautics-box-img {
+  background-image: url("../../../media/luke-ellis-craven.jpg");
   width: 100%;
   min-height: 500px;
   object-fit: cover;
   background-attachment: fixed;
-  //background-attachment: scroll;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
