--- a/app/src/scss/modules/_cosmology.scss
+++ b/app/src/scss/modules/_cosmology.scss
@@ -1,30 +1,29 @@
-.body-e-grid-container {
-  grid-template-areas: "body-e-box-1 body-e-box-2";
+.cosmology-grid-container {
+  grid-template-areas: "cosmology-box-1 cosmology-box-2";
 }
 
-.body-e-box-1 {
-  grid-area: body-e-box-1;
+.cosmology-box-1 {
+  grid-area: cosmology-box-1;
 }
 
-.body-e-box-2 {
-  grid-area: body-e-box-2;
-  padding: 50px 30px;
-  text-align: justify;
+.cosmology-box-2 {
+  grid-area: cosmology-box-2;
+  padding: 20px 30px;
+  @media #{$screen__l} {
+    padding: 50px 80px;
+  }
   p {
     font-size: $font--m;
     font-weight: 100;
   }
-  @media #{$screen__l} {
-    padding: 50px 80px;
-  }
 }
 
-.body-e-box-img {
-  background-image: url("../../../media/samuel-zeller.jpg");
+.cosmology-box-img {
+  background-image: url("../../../media/william-bout.jpg");
   width: 100%;
   min-height: 500px;
-  background-attachment: fixed;
   object-fit: cover;
+  background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
