--- a/app/src/scss/modules/_explore-for-kids.scss
+++ b/app/src/scss/modules/_explore-for-kids.scss
@@ -1,29 +1,30 @@
-.sub-page-body-e-grid-container {
-  grid-template-areas: "sub-page-body-e-box-1 sub-page-body-e-box-2";
+.explore-for-kids-grid-container {
+  grid-template-areas: "explore-for-kids-box-1 explore-for-kids-box-2";
 }
 
-.sub-page-body-e-box-1 {
-  grid-area: sub-page-body-e-box-1;
+.explore-for-kids-box-1 {
+  grid-area: explore-for-kids-box-1;
 }
 
-.sub-page-body-e-box-2 {
-  grid-area: sub-page-body-e-box-2;
-  padding: 20px 30px;
-  @media #{$screen__l} {
-    padding: 50px 80px;
-  }
+.explore-for-kids-box-2 {
+  grid-area: explore-for-kids-box-2;
+  padding: 50px 30px;
+  text-align: justify;
   p {
     font-size: $font--m;
     font-weight: 100;
   }
+  @media #{$screen__l} {
+    padding: 50px 80px;
+  }
 }
 
-.sub-page-body-e-box-img {
-  background-image: url("../../../media/people.jpg");
+.explore-for-kids-box-img {
+  background-image: url("../../../media/samuel-zeller.jpg");
   width: 100%;
   min-height: 500px;
-  object-fit: cover;
   background-attachment: fixed;
+  object-fit: cover;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
