--- a/app/src/scss/modules/_museum.scss
+++ b/app/src/scss/modules/_museum.scss
@@ -1,26 +1,25 @@
-.body-g-grid-container {
-  grid-template-areas: "body-g-box-1 body-g-box-2";
+.museum-grid-container {
+  grid-template-areas: "museum-box-1 museum-box-2";
 }
 
-.body-g-box-1 {
-  grid-area: body-g-box-1;
+.museum-box-1 {
+  grid-area: museum-box-1;
 }
 
-.body-g-box-2 {
-  grid-area: body-g-box-2;
-  padding: 50px 30px;
-  text-align: justify;
+.museum-box-2 {
+  grid-area: museum-box-2;
+  padding: 20px 30px;
+  @media #{$screen__l} {
+    padding: 50px 80px;
+  }
   p {
     font-size: $font--m;
     font-weight: 100;
   }
-  @media #{$screen__l} {
-    padding: 50px 80px;
-  }
 }
 
-.body-g-box-img {
-  background-image: url("../../../media/people.jpg");
+.museum-box-img {
+  background-image: url("../../../media/roberto-nickson.jpg");
   width: 100%;
   min-height: 500px;
   object-fit: cover;
