REFACTOR effect component and typewriter-effect-in-the-navigation

--- a/app/components/body-components/signup.html
+++ b/app/components/body-components/signup.html
@@ -12,7 +12,7 @@
       Department and they will be able to assist you.
     </p>
   </div>
-  <div class="signup-box-2 grid">
+  <div class="signup-box-2 grid-flex">
       <a href="/community.html">
         <button class="test-bottum">Volunteer</button>
       </a>
