--- a/app/src/scss/modules/_hero.scss
+++ b/app/src/scss/modules/_hero.scss
@@ -11,17 +11,42 @@
 
 .hero-box-2 {
   grid-area: hero-box-2;
-
+  display: flex;
+  //justify-content: center;
+  //margin-top: -150px;
+  position:absolute;
+  background-color: #18a0fbc2;
+  top: 355px;
+  width: 100%;
+  padding: 20px 0px 20px 0px;
   h3 {
-    background-color: #18a0fbc2;
     color: #fff;
-    display: flex;
-    justify-content: center;
-    margin-top: -105px;
-    font-size: $font--lx;
+    //font-size: $font--lx;
+    font-size: $font--m;
+    //test
+    overflow: hidden;
+    white-space: nowrap;
+    margin: 0 auto;
+    //animation-duration: 6s;
+    animation: test 2.4s steps(29, end);
+    text-align: center;
+    //animation-iteration-count: infinite ;
+    //animation-direction: alternate;
+    //animation-fill-mode: backwards;
+    //animation-fill-mode: forwards;
+    //animation-delay: 1s;
+    //transition: opacity 100ms;
+    //letter-spacing: .9em;
+    //max-width: 60%;
+    //
     @media #{$screen__l} {
       font-size: 70px;
     }
+  }
+@media #{$screen__l} {
+    font-size: 70px;
+    //margin-top: -320px;
+    //padding: 27px 0px 27px 0px;  
   }
 }
 
@@ -30,7 +55,7 @@
   height: 500px;
   background-image: url(../../media/scott-webb.jpg);
   object-fit: cover;
-  background-attachment: fixed;
+  //background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -42,3 +67,23 @@
     background-attachment: scroll;
   }
 }
+
+
+//test
+@keyframes test {
+  from { 
+    width: 0;
+    //margin-left: 100%;
+    //width: 300%;
+    //overflow: hidden;
+  }
+  //50% {
+  //  background-color: red;
+  //}
+  to { 
+    width: 100%;
+    //margin-left: 0%;
+    //width: 100%; 
+  }
+}
+//
