--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -41,6 +41,12 @@
   display: flex;
   justify-content: center; }
 
+.grid-flex {
+  display: flow-root; }
+  @media only screen and (min-width: 1024px) {
+    .grid-flex {
+      display: flex; } }
+
 /**
  * Grid Containers
  *
@@ -294,6 +300,9 @@ h3 {
   .md-side-nav.open-side-nav {
     width: 50%; } }
 
+.md-side-nav .aktiv-url {
+  color: #0b3d5e; }
+
 /* Style the header */
 .header {
   margin: 10px;
@@ -396,24 +405,33 @@ h3 {
   grid-area: hero-box-1; }
 
 .hero-box-2 {
-  grid-area: hero-box-2; }
+  grid-area: hero-box-2;
+  display: flex;
+  position: absolute;
+  background-color: #18a0fbc2;
+  top: 355px;
+  width: 100%;
+  padding: 20px 0px 20px 0px; }
   .hero-box-2 h3 {
-    background-color: #18a0fbc2;
     color: #fff;
-    display: flex;
-    justify-content: center;
-    margin-top: -105px;
-    font-size: 35px; }
+    font-size: 19px;
+    overflow: hidden;
+    white-space: nowrap;
+    margin: 0 auto;
+    animation: test 2.4s steps(29, end);
+    text-align: center; }
     @media only screen and (min-width: 1024px) {
       .hero-box-2 h3 {
         font-size: 70px; } }
+  @media only screen and (min-width: 1024px) {
+    .hero-box-2 {
+      font-size: 70px; } }
 
 .baner-img {
   width: 100%;
   height: 500px;
   background-image: url(../../media/scott-webb.jpg);
   object-fit: cover;
-  background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -424,6 +442,12 @@ h3 {
   @media not all and (min-resolution: 0.001dpcm) {
     .baner-img {
       background-attachment: scroll; } }
+
+@keyframes test {
+  from {
+    width: 0; }
+  to {
+    width: 100%; } }
 
 .info-box-grid-container {
   grid-template-areas: "bady-box-b-1 body-box-b-2 body-box-b-3"; }
@@ -1506,7 +1530,7 @@ h3 {
         border-radius: 100%;
         position: absolute;
         left: 80%;
-        top: 50%;
+        bottom: 50px;
         z-index: 11; } }
   .community-form-box-4 input[type=submit]:hover {
     background-color: #096fb6b5; }
@@ -1540,6 +1564,7 @@ input[type=text], select, textarea {
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 0.1fr 0.1fr 0.1fr;
   gap: 7px 0px;
+  position: relative;
   grid-template-areas: "community-form-box community-form-box" "community-form-box-1 community-form-box-1" "community-form-box-2 community-form-box-2" "community-form-box-3 community-form-box-3" "community-form-box-4 community-form-box-4"; }
 
 .community-form-box {
@@ -1572,8 +1597,8 @@ input[type=text], select, textarea {
         height: 80px;
         border-radius: 100%;
         position: absolute;
-        left: 80%;
-        top: 50%;
+        bottom: 40px;
+        right: calc(10% + 30px);
         z-index: 11; } }
   .community-form-box-4 input[type=submit]:hover {
     background-color: #096fb6b5; }
