--- a/app/src/scss/modules/_volunteer-form.scss
+++ b/app/src/scss/modules/_volunteer-form.scss
@@ -48,7 +48,7 @@
       border-radius: 100%;
       position: absolute;
       left: 80%;
-      top: 50%;
+      bottom: 50px;
       z-index: 11;
       }
     }
