accessibility issues, Adding fix/indicating problems for older users.

--- a/app/components/body-components/testimonial.html
+++ b/app/components/body-components/testimonial.html
@@ -18,28 +18,32 @@
     </p>
   </div>
   <div class="testimonial-box-1">
-    <a href="/exhibition.html#section-box1">
-      <button class="testimonial-button">Cosmology</button>
-    </a>
+    <button class="testimonial-button"><a href="/exhibition.html#section-box1">
+      Cosmology
+    </a></button>
   </div>
   <div class="testimonial-box-2">
-    <a href="/exhibition.html#section-box2">
-      <button class="testimonial-button">Evolution</button>
-    </a>
+    <button class="testimonial-button">
+    <a href="/exhibition.html#section-box2"> 
+      Evolution
+    </a></button>
   </div>
   <div class="testimonial-box-3">
+    <button class="testimonial-button">
     <a href="/exhibition.html#section-box3">
-      <button class="testimonial-button">Robotics and AI</button>
-    </a>
+      Robotics and AI
+    </a></button>
   </div>
   <div class="testimonial-box-4">
+    <button class="testimonial-button">
     <a href="/exhibition.html#section-box4">
-      <button class="testimonial-button">Biology & Medicine</button>
-    </a>
+      Biology & Medicine
+    </a></button>
   </div>
   <div class="testimonial-box-5">
+    <button class="testimonial-button">
     <a href="/exhibition.html#section-box5">
-      <button class="testimonial-button">Ecology</button>
-    </a>
+      Ecology
+    </a></button>
   </div>
 </div>
