--- a/app/components/nav.html
+++ b/app/components/nav.html
@@ -1,3 +1,7 @@
+<a href="javascript:void(0)" class="open-nav" onclick="openSideNav()" onkeyup="openSideNav()"
+  >&#9776;
+  <p class="txt-side-nav">Meny</p></a
+>
 <div id="side-nav" class="md-side-nav">
   <li>
     <a
@@ -17,7 +21,3 @@
     <li><a href="/shop.html">Shop</a></li>
   </ul>
 </div>
-<span class="open-nav" onclick="openSideNav()" onkeyup="openSideNav()"
-  >&#9776;
-  <p class="txt-side-nav">Meny</p></span
->
