--- a/app/src/scss/modules/_info-box.scss
+++ b/app/src/scss/modules/_info-box.scss
@@ -28,7 +28,7 @@
 
 .body-box1-tital {
   grid-area: body-box1-tital;
-  background-color: #18a0fbc2;
+  background-color: #0b3d5e;
   color: #fff;
   padding: $padding--s;
   text-align: center;
