--- a/app/src/scss/modules/_shop-2.scss
+++ b/app/src/scss/modules/_shop-2.scss
@@ -54,117 +54,17 @@
   box-shadow: 0 15px 15px 0 rgba(0, 0, 0, 0.2);
 }
 
-.product-box-img-2-1 {
-  background-image: url("../../../media/celso.jpg");
+.product-box-img-2-1, 
+.product-box-img-2-2, 
+.product-box-img-2-3, 
+.product-box-img-2-4, 
+.product-box-img-2-5, 
+.product-box-img-2-6,
+.product-box-img-2-6,
+.product-box-img-2-7,
+.product-box-img-2-8,
+.product-box-img-2-9  {
   width: 100%;
-  min-height: 250px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  cursor: pointer;
-}
-
-.product-box-img-2-2 {
-  background-image: url("../../../media/exhibition.jpg");
-  width: 100%;
-  min-height: 250px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  cursor: pointer;
-}
-
-.product-box-img-2-3 {
-  background-image: url("../../../media/scientific.jpg");
-  width: 100%;
-  min-height: 250px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  cursor: pointer;
-}
-.product-box-img-2-4 {
-  background-image: url("../../../media/heart.jpg");
-  width: 100%;
-  min-height: 250px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  cursor: pointer;
-}
-.product-box-img-2-5 {
-  background-image: url("../../../media/mammoth.jpg");
-  width: 100%;
-  min-height: 250px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  cursor: pointer;
-}
-
-.product-box-img-2-6 {
-  background-image: url("../../../media/william-bout.jpg");
-  width: 100%;
-  min-height: 250px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  cursor: pointer;
-}
-
-.product-box-img-2-7 {
-  background-image: url("../../../media/scott-webb.jpg");
-  width: 100%;
-  min-height: 250px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  cursor: pointer;
-}
-
-.product-box-img-2-8 {
-  background-image: url("../../../media/skeleton.jpg");
-  width: 100%;
-  min-height: 250px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  cursor: pointer;
-}
-
-.product-box-img-2-9 {
-  background-image: url("../../../media/samuel-zeller.jpg");
-  width: 100%;
-  min-height: 250px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
+  height: 250px;
   cursor: pointer;
 }
