--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -205,9 +205,6 @@ main {
 html {
   scroll-behavior: smooth; }
 
-img {
-  width: 100%; }
-
 body {
   font-family: "Comfortaa", "Montserrat", sans-serif;
   font-weight: 100;
@@ -472,7 +469,7 @@ h3 {
 
 .body-box1-tital {
   grid-area: body-box1-tital;
-  background-color: #18a0fbc2;
+  background-color: #0b3d5e;
   color: #fff;
   padding: 15px;
   text-align: center; }
@@ -745,7 +742,6 @@ h3 {
     font-size: 20px;
     padding: 10px 20px 10px 20px;
     text-decoration: none;
-    color: #fff;
     position: relative;
     box-shadow: 0px 20px 54px 5px #5098c959;
     cursor: pointer;
@@ -759,6 +755,9 @@ h3 {
     transition: 1s;
     position: relative;
     box-shadow: 0px 20px 54px 5px #686868; }
+
+.testimonial-button a {
+  color: #fff; }
 
 .signup-grid-container {
   grid-template-areas: "signup-box-1 signup-box-2"; }
@@ -802,7 +801,10 @@ h3 {
 
 @media only screen and (min-width: 1024px) {
   .test-bottum {
-    margin-top: 75px; } }
+    margin: 130px 10px 0px 0px; } }
+
+.test-bottum a {
+  color: #fff; }
 
 .signup-box-1 h2 {
   font-size: 19px; }
@@ -1199,7 +1201,7 @@ h3 {
   position: relative;
   width: 100%;
   text-align: center;
-  transition: transform 0.8s;
+  transition: transform 0.4s;
   transform-style: preserve-3d; }
 
 .product-box:hover .product-box-layer {
@@ -1220,6 +1222,10 @@ h3 {
   background-color: transparent;
   box-shadow: 0 15px 15px 0 rgba(0, 0, 0, 0.2); }
 
+.product-box-front-layer {
+  height: 250px;
+  overflow: hidden; }
+
 .product-box-back-layer {
   background-color: #18a0fb73;
   padding: 25px 15px;
@@ -1233,112 +1239,18 @@ h3 {
   .product-box-back-layer p {
     font-size: 15px; }
 
-.product-box-img {
-  background-image: url("../../../media/");
-  width: 100%;
-  min-height: 250px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  cursor: pointer; }
-
-.product-box-img-2 {
-  background-image: url("../../../media/");
-  width: 100%;
-  min-height: 250px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  cursor: pointer; }
-
-.product-box-img-3 {
-  background-image: url("../../../media/");
-  width: 100%;
-  min-height: 250px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  cursor: pointer; }
-
-.product-box-img-4 {
-  background-image: url("../../../media/");
-  width: 100%;
-  min-height: 250px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  cursor: pointer; }
-
-.product-box-img-5 {
-  background-image: url("../../../media/");
-  width: 100%;
-  min-height: 250px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  cursor: pointer; }
-
-.product-box-img-6 {
-  background-image: url("../../../media/");
-  width: 100%;
-  min-height: 250px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  cursor: pointer; }
-
-.product-box-img-7 {
-  background-image: url("../../../media/");
-  width: 100%;
-  min-height: 250px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  cursor: pointer; }
-
-.product-box-img-8 {
-  background-image: url("../../../media/");
-  width: 100%;
-  min-height: 250px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  cursor: pointer; }
-
+.product-box-img,
+.product-box-img-1,
+.product-box-img-2,
+.product-box-img-3,
+.product-box-img-4,
+.product-box-img-5,
+.product-box-img-6,
+.product-box-img-7,
+.product-box-img-8,
 .product-box-img-9 {
-  background-image: url("../../../media/");
   width: 100%;
-  min-height: 250px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
+  height: 250px;
   cursor: pointer; }
 
 .shop-box-2-grid-container {
@@ -1383,112 +1295,18 @@ h3 {
   padding: 5px;
   box-shadow: 0 15px 15px 0 rgba(0, 0, 0, 0.2); }
 
-.product-box-img-2-1 {
-  background-image: url("../../../media/celso.jpg");
-  width: 100%;
-  min-height: 250px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  cursor: pointer; }
-
-.product-box-img-2-2 {
-  background-image: url("../../../media/exhibition.jpg");
-  width: 100%;
-  min-height: 250px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  cursor: pointer; }
-
-.product-box-img-2-3 {
-  background-image: url("../../../media/scientific.jpg");
-  width: 100%;
-  min-height: 250px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  cursor: pointer; }
-
-.product-box-img-2-4 {
-  background-image: url("../../../media/heart.jpg");
-  width: 100%;
-  min-height: 250px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  cursor: pointer; }
-
-.product-box-img-2-5 {
-  background-image: url("../../../media/mammoth.jpg");
-  width: 100%;
-  min-height: 250px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  cursor: pointer; }
-
-.product-box-img-2-6 {
-  background-image: url("../../../media/william-bout.jpg");
-  width: 100%;
-  min-height: 250px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  cursor: pointer; }
-
-.product-box-img-2-7 {
-  background-image: url("../../../media/scott-webb.jpg");
-  width: 100%;
-  min-height: 250px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  cursor: pointer; }
-
-.product-box-img-2-8 {
-  background-image: url("../../../media/skeleton.jpg");
-  width: 100%;
-  min-height: 250px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  cursor: pointer; }
-
+.product-box-img-2-1,
+.product-box-img-2-2,
+.product-box-img-2-3,
+.product-box-img-2-4,
+.product-box-img-2-5,
+.product-box-img-2-6,
+.product-box-img-2-6,
+.product-box-img-2-7,
+.product-box-img-2-8,
 .product-box-img-2-9 {
-  background-image: url("../../../media/samuel-zeller.jpg");
   width: 100%;
-  min-height: 250px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
+  height: 250px;
   cursor: pointer; }
 
 .community-form-grid-container {
@@ -1535,7 +1353,11 @@ h3 {
   .community-form-box-4 input[type=submit]:hover {
     background-color: #096fb6b5; }
 
-.community-form-box, .community-form-box-1, .community-form-box-2, .community-form-box-3, .community-form-box-4 {
+.community-form-box,
+.community-form-box-1,
+.community-form-box-2,
+.community-form-box-3,
+.community-form-box-4 {
   width: 100%; }
 
 input[type=text], select, textarea {
