--- a/app/components/body-components/info-box.html
+++ b/app/components/body-components/info-box.html
@@ -77,6 +77,7 @@
   </div>
   <div class="body-box-b-3">
     <iframe
+      title="google maps"
       width="100%"
       height="100%"
       id="gmap_canvas"
