--- a/app/components/body-components/signup.html
+++ b/app/components/body-components/signup.html
@@ -13,11 +13,13 @@
     </p>
   </div>
   <div class="signup-box-2 grid-flex">
+    <button class="test-bottum">
       <a href="/community.html">
-        <button class="test-bottum">Volunteer</button>
-      </a>
+        Volunteer
+      </a></button>
+      <button class="test-bottum">
       <a href="/community-1.html">
-        <button class="test-bottum">Internships</button>
-      </a>
+        Internships
+      </a></button>
   </div>
 </div>
