--- a/app/components/shops/shop-2.html
+++ b/app/components/shops/shop-2.html
@@ -2,7 +2,9 @@
   <div class="shop-box-2-1">
     <div class="product-box">
       <div class="product-box-layer">
-        <div class="product-box-front-layer product-box-img-2-1">
+        <!--<div class="product-box-front-layer product-box-img-2-1"></div>-->
+        <div class="product-box-front-layer">
+          <img class="product-box-img-2-1" alt="produckt img" src="../../media/celso.jpg"> <!--class="product-box-img-2-1"-->
         </div>
         <div class="product-box-back-layer">
             <label class="lbl-soldout">Sold Out</label>
@@ -22,7 +24,10 @@
   <div class="shop-box-2-2">
     <div class="product-box">
       <div class="product-box-layer">
-        <div class="product-box-front-layer product-box-img-2-2"></div>
+        <!--<div class="product-box-front-layer product-box-img-2-2"></div>-->
+        <div class="product-box-front-layer">
+          <img class="product-box-img-2-2" alt="produckt img" src="../../media/exhibition.jpg">
+        </div>
         <div class="product-box-back-layer">
             <label class="lbl-soldout">Sold Out</label>
           <h1>SPACE SHUTTLE</h1>
@@ -41,7 +46,10 @@
   <div class="shop-box-2-3">
     <div class="product-box">
       <div class="product-box-layer">
-        <div class="product-box-front-layer product-box-img-2-3"></div>
+        <!--<div class="product-box-front-layer product-box-img-2-3"></div>-->
+        <div class="product-box-front-layer">
+          <img class="product-box-img-2-3" alt="produckt img" src="../../media/scientific.jpg">
+        </div>
         <div class="product-box-back-layer">
             <label class="lbl-soldout">Sold Out</label>
             <h1>THE </h1>
@@ -60,7 +68,10 @@
   <div class="shop-box-2-4">
     <div class="product-box">
       <div class="product-box-layer">
-        <div class="product-box-front-layer product-box-img-2-4"></div>
+        <!--<div class="product-box-front-layer product-box-img-2-4"></div>-->
+        <div class="product-box-front-layer">
+          <img class="product-box-img-2-4" alt="produckt img" src="../../media/heart.jpg">
+        </div>
         <div class="product-box-back-layer">
             <label class="lbl-soldout">Sold Out</label>
             <h1>THE </h1>
@@ -79,7 +90,10 @@
   <div class="shop-box-2-5">
     <div class="product-box">
       <div class="product-box-layer">
-        <div class="product-box-front-layer product-box-img-2-5"></div>
+        <!--<div class="product-box-front-layer product-box-img-2-5"></div>-->
+        <div class="product-box-front-layer">
+          <img class="product-box-img-2-5" alt="produckt img" src="../../media/mammoth.jpg">
+        </div>
         <div class="product-box-back-layer">
             <label class="lbl-soldout">Sold Out</label>
             <h1>THE </h1>
@@ -98,7 +112,10 @@
   <div class="shop-box-2-6">
     <div class="product-box">
       <div class="product-box-layer">
-        <div class="product-box-front-layer product-box-img-2-6"></div>
+        <!--<div class="product-box-front-layer product-box-img-2-6"></div>-->
+        <div class="product-box-front-layer">
+          <img class="product-box-img-2-6" alt="produckt img" src="../../media/william-bout.jpg">
+        </div>
         <div class="product-box-back-layer">
             <label class="lbl-soldout">Sold Out</label>
             <h1>THE </h1>
@@ -117,7 +134,10 @@
   <div class="shop-box-2-7">
     <div class="product-box">
       <div class="product-box-layer">
-        <div class="product-box-front-layer product-box-img-2-7"></div>
+        <!--<div class="product-box-front-layer product-box-img-2-7"></div>-->
+        <div class="product-box-front-layer">
+          <img class="product-box-img-2-7" alt="produckt img" src="../../media/scott-webb.jpg">
+        </div>
         <div class="product-box-back-layer">
             <label class="lbl-soldout">Sold Out</label>
             <h1>THE </h1>
@@ -136,7 +156,10 @@
   <div class="shop-box-2-8">
     <div class="product-box">
       <div class="product-box-layer">
-        <div class="product-box-front-layer product-box-img-2-8"></div>
+        <!--<div class="product-box-front-layer product-box-img-2-8"></div>-->
+        <div class="product-box-front-layer">
+          <img class="product-box-img-2-8" alt="produckt img" src="../../media/skeleton.jpg">
+        </div>
         <div class="product-box-back-layer">
             <label class="lbl-soldout">Sold Out</label>
             <h1>THE </h1>
@@ -155,7 +178,10 @@
   <div class="shop-box-2-9">
     <div class="product-box">
       <div class="product-box-layer">
-        <div class="product-box-front-layer product-box-img-2-9"></div>
+        <!--<div class="product-box-front-layer product-box-img-2-9"></div>-->
+        <div class="product-box-front-layer">
+          <img class="product-box-img-2-9" alt="produckt img" src="../../media/samuel-zeller.jpg">
+        </div>
         <div class="product-box-back-layer">
             <label class="lbl-soldout">Sold Out</label>
             <h1>THE </h1>
