--- a/app/components/shops/shop.html
+++ b/app/components/shops/shop.html
@@ -2,7 +2,10 @@
   <div class="shop-box-1">
     <div class="product-box">
       <div class="product-box-layer">
-        <div class="product-box-front-layer product-box-img" alt="produckt img"></div>
+        <!--<div class="product-box-front-layer product-box-img" alt="produckt img"></div>-->
+        <div class="product-box-front-layer">
+          <img class="product-box-img" alt="coming soon img" src="../../media/coming-soon.png">
+        </div>
         <div class="product-box-back-layer">
             <label class="lbl-soldout">New</label>
           <h1>xxxx</h1>
@@ -11,7 +14,7 @@
             xxxx 
           </p>
           <br />
-          <p>kr 186,75</p>
+          <p>kr xxxx</p>
           <br />
           <p>xxxx</p>
         </div>
@@ -21,7 +24,10 @@
   <div class="shop-box-2">
     <div class="product-box">
       <div class="product-box-layer">
-        <div class="product-box-front-layer product-box-img-2"></div>
+        <!--<div class="product-box-front-layer product-box-img-2"></div>-->
+        <div class="product-box-front-layer">
+          <img class="product-box-img-2" alt="coming soonimg" src="../../media/coming-soon.png">
+        </div>
         <div class="product-box-back-layer">
             <label class="lbl-soldout">New</label>
             <h1>xxxx</h1>
@@ -30,7 +36,7 @@
               xxxx 
             </p>
             <br />
-            <p>kr 186,75</p>
+            <p>kr xxxxx</p>
             <br />
             <p>xxxx</p>
         </div>
@@ -40,7 +46,10 @@
   <div class="shop-box-3">
     <div class="product-box">
       <div class="product-box-layer">
-        <div class="product-box-front-layer product-box-img-3"></div>
+        <!--<div class="product-box-front-layer product-box-img-3"></div>-->
+        <div class="product-box-front-layer">
+          <img class="product-box-img-3" alt="coming soon img" src="../../media/coming-soon.png">
+        </div>
         <div class="product-box-back-layer">
             <label class="lbl-soldout">New</label>
             <h1>xxxx</h1>
@@ -49,7 +58,7 @@
               xxxx 
             </p>
             <br />
-            <p>kr 186,75</p>
+            <p>kr xxxxx</p>
             <br />
             <p>xxxx</p>
         </div>
@@ -59,7 +68,10 @@
   <div class="shop-box-4">
     <div class="product-box">
       <div class="product-box-layer">
-        <div class="product-box-front-layer product-box-img-4"></div>
+        <!--<div class="product-box-front-layer product-box-img-4"></div>-->
+        <div class="product-box-front-layer">
+          <img class="product-box-img-4" alt="coming soon img" src="../../media/coming-soon.png">
+        </div>
         <div class="product-box-back-layer">
             <label class="lbl-soldout">Sold Out</label>
             <h1>xxxx</h1>
@@ -68,7 +80,7 @@
               xxxx 
             </p>
             <br />
-            <p>kr 186,75</p>
+            <p>kr xxxx</p>
             <br />
             <p>xxxx</p>
         </div>
@@ -78,7 +90,10 @@
   <div class="shop-box-5">
     <div class="product-box">
       <div class="product-box-layer">
-        <div class="product-box-front-layer product-box-img-5"></div>
+        <!--<div class="product-box-front-layer product-box-img-5"></div>-->
+        <div class="product-box-front-layer">
+          <img class="product-box-img-5" alt="coming soon img" src="../../media/coming-soon.png">
+        </div>
         <div class="product-box-back-layer">
             <label class="lbl-soldout">New</label>
             <h1>xxxx</h1>
@@ -87,7 +102,7 @@
               xxxx 
             </p>
             <br />
-            <p>kr 186,75</p>
+            <p>kr xxxxx</p>
             <br />
             <p>xxxx</p>
         </div>
@@ -97,7 +112,10 @@
   <div class="shop-box-6">
     <div class="product-box">
       <div class="product-box-layer">
-        <div class="product-box-front-layer product-box-img-6"></div>
+        <!--<div class="product-box-front-layer product-box-img-6"></div>-->
+        <div class="product-box-front-layer">
+          <img class="product-box-img-6" alt="coming soon img" src="../../media/coming-soon.png">
+        </div>
         <div class="product-box-back-layer">
             <label class="lbl-soldout">New</label>
             <h1>xxxx</h1>
@@ -106,7 +124,7 @@
               xxxx 
             </p>
             <br />
-            <p>kr 186,75</p>
+            <p>kr xxxxx</p>
             <br />
             <p>xxxx</p>
         </div>
@@ -116,7 +134,10 @@
   <div class="shop-box-7">
     <div class="product-box">
       <div class="product-box-layer">
-        <div class="product-box-front-layer product-box-img-7"></div>
+        <!--<div class="product-box-front-layer product-box-img-7"></div>-->
+        <div class="product-box-front-layer">
+          <img class="product-box-img-7" alt="coming soon img" src="../../media/coming-soon.png">
+        </div>
         <div class="product-box-back-layer">
             <label class="lbl-soldout">New</label>
             <h1>xxxx</h1>
@@ -125,7 +146,7 @@
               xxxx 
             </p>
             <br />
-            <p>kr 186,75</p>
+            <p>kr xxxx</p>
             <br />
             <p>xxxx</p>
         </div>
@@ -135,7 +156,10 @@
   <div class="shop-box-8">
     <div class="product-box">
       <div class="product-box-layer">
-        <div class="product-box-front-layer product-box-img-8"></div>
+        <!--<div class="product-box-front-layer product-box-img-8"></div>-->
+        <div class="product-box-front-layer">
+          <img class="product-box-img-8" alt="coming soon img" src="../../media/coming-soon.png">
+        </div>
         <div class="product-box-back-layer">
             <label class="lbl-soldout">New</label>
             <h1>xxxx</h1>
@@ -144,7 +168,7 @@
               xxxx 
             </p>
             <br />
-            <p>kr 186,75</p>
+            <p>kr xxxx</p>
             <br />
             <p>xxxx</p>
         </div>
@@ -154,7 +178,10 @@
   <div class="shop-box-9">
     <div class="product-box">
       <div class="product-box-layer">
-        <div class="product-box-front-layer product-box-img-9"></div>
+        <!--<div class="product-box-front-layer product-box-img-9"></div>-->
+        <div class="product-box-front-layer">
+          <img class="product-box-img-9" alt="coming soon img" src="../../media/coming-soon.png">
+        </div>
         <div class="product-box-back-layer">
             <label class="lbl-soldout">New</label>
             <h1>xxxx</h1>
@@ -163,7 +190,7 @@
               xxxx 
             </p>
             <br />
-            <p>kr 186,75</p>
+            <p>kr xxxx</p>
             <br />
             <p>xxxx</p>
         </div>
