--- a/app/src/scss/modules/_shop.scss
+++ b/app/src/scss/modules/_shop.scss
@@ -51,7 +51,7 @@
   position: relative;
   width: 100%;
   text-align: center;
-  transition: transform 0.8s;
+  transition: transform 0.4s;
   transform-style: preserve-3d;
 }
 
@@ -76,6 +76,11 @@
   box-shadow: 0 15px 15px 0 rgba(0, 0, 0, 0.2);
 }
 
+.product-box-front-layer {
+  height: 250px;
+  overflow: hidden;
+}
+
 .product-box-back-layer {
   background-color: #18a0fb73;
   padding: 25px 15px;
@@ -91,119 +96,18 @@
   }
 }
 
-.product-box-img {
-  background-image: url("../../../media/");
-  width: 100%;
-  min-height: 250px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  cursor: pointer;
-}
-
-.product-box-img-2 {
-  background-image: url("../../../media/");
-  width: 100%;
-  min-height: 250px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  cursor: pointer;
-}
-
-.product-box-img-3 {
-  background-image: url("../../../media/");
-  width: 100%;
-  min-height: 250px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  cursor: pointer;
-}
-
-.product-box-img-4 {
-  background-image: url("../../../media/");
-  width: 100%;
-  min-height: 250px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  cursor: pointer;
-}
-
-.product-box-img-5 {
-  background-image: url("../../../media/");
-  width: 100%;
-  min-height: 250px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  cursor: pointer;
-}
-
-.product-box-img-6 {
-  background-image: url("../../../media/");
-  width: 100%;
-  min-height: 250px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  cursor: pointer;
-}
-
-.product-box-img-7 {
-  background-image: url("../../../media/");
-  width: 100%;
-  min-height: 250px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  cursor: pointer;
-}
-
-.product-box-img-8 {
-  background-image: url("../../../media/");
-  width: 100%;
-  min-height: 250px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  cursor: pointer;
-}
-
+.product-box-img,
+.product-box-img-1,
+.product-box-img-2,
+.product-box-img-3,
+.product-box-img-4,
+.product-box-img-5,
+.product-box-img-6,
+.product-box-img-7,
+.product-box-img-8,
 .product-box-img-9 {
-  background-image: url("../../../media/");
   width: 100%;
-  min-height: 250px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
+  height: 250px;
   cursor: pointer;
 }
+
