--- a/app/src/scss/modules/_testimonal.scss
+++ b/app/src/scss/modules/_testimonal.scss
@@ -61,14 +61,13 @@
     @media #{$screen__l} {
       margin-top: 80px;
     }
-    .testimonial-button {
+    .testimonial-button  {
         background-color: #18a0fb;
         border: none;
         border-radius: 5px;
         font-size: 20px;
         padding: 10px 20px 10px 20px;
         text-decoration: none;
-        color: #fff;
         position: relative;	
         box-shadow: 0px 20px 54px 5px #5098c959;
         cursor: pointer;
@@ -81,4 +80,9 @@
         box-shadow: 0px 20px 54px 5px #686868;
       }
 }
+
+.testimonial-button a {
+  color: #fff;
+}
+
 
